--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-    <title>Page Title</title>
+    <title>Bootstrap Quiz</title>
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -122,7 +122,7 @@
 
 <footer>
     <div class="d-flex justify-content-center pt-5 mt-3 bg-dark text-white">
-        Copyright &copy; Your Website 2017
+        <span>Copyright &copy; Your Website 2017</span>
     </div>
 </footer>
 
