--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand pl-5" href="#">Boostrap 4 Demo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=#navbar-nav>
+				<span class="navbar-toggler-icon"></span>
+		</button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse pl-5" id="navbar-nav">
             <ul class="navbar-nav ml-auto pr-5">
 
               <li class="nav-item active">
@@ -50,34 +50,44 @@
             </ul> 
         </div>
     </nav>
+    <!-- end of nav -->
 
-    <div class="container-fluid mt-3">
+    <div class="container-fluid">
 
-        <div class="row">
-            <div class="col ml-5">
-                <img src="https://via.placeholder.com/900x400" alt="generic image">
+        <div class="row mx-4 px-2">
+            <div class="col-12 col-lg-8 col-md-12 col-sm-12">
+                <img class="img-fluid" src="https://via.placeholder.com/900x400" alt="responsive image">
             </div>
-            <div class="col mr-5">
-                <div class="media-body">
-                    <h1 class="mt-0">Business Name or Tagline</h1>
-                    <p> This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Boostrap core components. Feel free ot use this tempate for any projet you want! </p>
-                </div>
 
-                <button type="button" class="btn btn-primary btn-lg">Call to Action!</button>
+            <div class="col-12 col-lg-3 col-md-12 col-sm-12">
+                <div class="media-body">
+                    <h1>Business Name or Tagline</h1>
+                    <p> This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Boostrap core components. Feel free ot use this tempate for any projet you want! </p>
+                
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 pl-0">
+                            <button type="button" class="btn btn-primary btn-lg">Call to Action!</button>
+                        </div>
+                    </div>
+                 </div>
+                </div>
+                 <!-- end of media body -->
             </div>
         </div> 
         <!-- end of row -->
     
-        <div class="row mt-3">
+        <div class="row">
             <div class="col mx-5"> 
-                <div class="d-flex justify-content-center p-3 bd-highlight bg-secondary text-white">
-                This call to action card is a great place to showcase some important infomation or display a clever tagline!
+                <div class="text-center p-3 bd-highlight bg-secondary text-white">
+                This call to action card is a great place to showcase some important infomation or display a clever tag line!
                 </div>
             </div>
        </div>
        <!-- end of row -->
 
-       <div class="row mt-3">
+       <div class="row">
             <div class="col mx-5">
                 <div class="card-deck">
                     <div class="card">
@@ -116,22 +126,24 @@
             <!-- end of card column -->
         </div>
         <!-- end of card row -->
-
     </div> 
-    <!-- end of container -->
+    <!-- end of container --> 
 
-<footer>
-    <div class="d-flex justify-content-center pt-5 mt-3 bg-dark text-white">
+<div class="position-bottom mt-3">
+    <div class="d-flex justify-content-center pt-5 pb-2 bg-dark text-white">
         <span>Copyright &copy; Your Website 2017</span>
     </div>
-</footer>
+</div>
 
 
 
-<!-- jquery then popper then bootstrap js -->
+<!-- jquery first then popper then bootstrap js -->
 <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script type="text/javascript"   src="assets/js/bootstrap.min.js></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+<!-- external boostrap js -->
+<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
