responsive at last

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
     </nav>
     <!-- end of nav -->
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="main-container">
 
         <div class="row mx-4 px-2">
-            <div class="col-12 col-lg-8 col-md-12 col-sm-12">
+            <div class="col-lg-7 col-md-12 col-sm-12">
                 <img class="img-fluid" src="https://via.placeholder.com/900x400" alt="responsive image">
             </div>
 
-            <div class="col-12 col-lg-3 col-md-12 col-sm-12">
+            <div class="col-lg-5 col-md-12 col-sm-12">
                 <div class="media-body">
-                    <h1>Business Name or Tagline</h1>
+                    <h1 class="display-4">Business Name or Tagline</h1>
                     <p> This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Boostrap core components. Feel free ot use this tempate for any projet you want! </p>
                 
 
-                <div class="container">
+                <div class="container" id="btn-action">
                     <div class="row">
                         <div class="col-12 pl-0">
                             <button type="button" class="btn btn-primary btn-lg">Call to Action!</button>
@@ -92,8 +92,8 @@
                 <div class="card-deck">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Card One</h5>
-                            <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus quam quibusdam! Enim a vitae doloribus adipisci perferendis maxime excepturi? </p>
+                            <h1 class="display-6">Card One</h1>
+                            <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam officia ipsa sapiente, dolorum sit porro accusamus earum quam autem aliquam, enim placeat, aliquid dolore incidunt quae blanditiis ea expedita architecto.</p>
                             <hr my-3>
                             <button type="button" class="btn btn-primary">More Info</button>
                         </div>
@@ -102,17 +102,17 @@
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Card Two</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, labore.</p>
+                           <h1 class="display-6">Card Two</h1>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam officia ipsa sapiente, dolorum sit porro accusamus earum quam autem aliquam, enim placeat, aliquid dolore incidunt quae blanditiis ea expedita architecto.</p>
                             <hr my-3>
                             <button type="button" class="btn btn-primary">More Info</button>
                         </div>
                     </div> 
                     <!-- end of card 2 -->
 
-                    <div class="card">
+                    <div class="card" id="card-3">
                         <div class="card-body">
-                            <h5 class="card-title">Card Three</h5>
+                            <h1 class="display-6">Card Three</h1>
                             <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam officia ipsa sapiente, dolorum sit porro accusamus earum quam autem aliquam, enim placeat, aliquid dolore incidunt quae blanditiis ea expedita architecto. </p>
                             <hr my-3>
                             <button type="button" class="btn btn-primary">More Info</button>
@@ -126,14 +126,23 @@
             <!-- end of card column -->
         </div>
         <!-- end of card row -->
+
+        <div class="row fixed-bottom">
+            <div class="col d-flex justify-content-center pt-5 pb-2 bg-dark text-white">
+                <span>Copyright &copy; Your Website 2017</span>
+        </div>
+        <!-- end of footer row -->
     </div> 
     <!-- end of container --> 
 
-<div class="position-bottom mt-3">
+<!-- <footer class="mt-3">
     <div class="d-flex justify-content-center pt-5 pb-2 bg-dark text-white">
         <span>Copyright &copy; Your Website 2017</span>
     </div>
-</div>
+</footer> -->
+
+
+
 
 
 
